--- a/template.Rmd
+++ b/template.Rmd
@@ -2,11 +2,11 @@
 title: "Simple document"
 author: Jianing Chen
 date: "2024-09-10"
-output: 
-  html_document:
-    toc: true
-    toc_float: true
-    code_folding: hide
+output: github_document
+    #pdf_document
+    #toc: true
+    #toc_float: true
+    #code_folding: hide
     
  ## pdf_document
   ##word_document
